--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,16 +11,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
+
       - name: Install dependencies
         run: go get .
+
       - name: Test with Go
-        run: go test -json > TestResults-${{ matrix.go-version }}.json
-      - name: Upload Go test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: Go-results-${{ matrix.go-version }}
-          path: TestResults-${{ matrix.go-version }}.json
+        run: go test
+#        run: go test -json > TestResults-${{ matrix.go-version }}.json
+
+#      - name: Upload Go test results
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: Go-results-${{ matrix.go-version }}
+#          path: TestResults-${{ matrix.go-version }}.json
