--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.13', '1.20', '1.21' ]
+        go-version: [ '1.21' ]
 
     steps:
       - uses: actions/checkout@v4
